Switched to rebooting weekly, rather than the rather strange choice of every 2 days

--- a/cron.yaml
+++ b/cron.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
-  schedule: "0 0 */2 * *"
+  schedule: "0 0 * * SUN"
   jobTemplate:
     spec:
       template:
